@@ -6,6 +6,7 @@ Changes in openair 0.5-11 [2011-09-14]
 *	remove warnings when importing air pollution data
 *	additional update to corPlot
         added pollutant option, and openair class output
+*	tweak scaling on percentileRose deal with negative data
 
 Changes in openair 0.5-10 [2011-09-12]
 =====================================
